Integrate Jsoup for HTML page parsing.